--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+python-ioc (1.1.0-ubuntu4) stable; urgency=medium
+
+  * Updated source.
+
+ -- Sousou Industries Releases <releases@sousouindustries.com>  Wed, 20 Jan 2016 22:24:39 +0100
+
 python-ioc (1.1.0-ubuntu3) stable; urgency=medium
 
   * Reprepro whining.
